push state testing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
+<!doctype html>
 <html>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-	testing
+	<ul class="articles">
+        <li><a href="/blog/articles/windows7_uefi.md">Установка Windows 7 x64 на UEFI</a></li>
+    </ul>
+    <div class="content" style="display: none">
+        <div class="title">
+            <div class="back"><a href="javascript:void(0);">back</a></div>
+            <div class="title_text"></div>
+        </div>
+        <div class="text"></div>
+    </div>
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="js/showdown.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
