--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<ul class="articles">
-        <li><a href="/blog/articles/windows7_uefi.md">Установка Windows 7 x64 на UEFI</a></li>
+        <li><a href="/articles/windows7_uefi.md">Установка Windows 7 x64 на UEFI</a></li>
     </ul>
     <div class="content" style="display: none">
         <div class="title">
