--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 	<ul class="articles">
         <li><a href="/articles/windows7_uefi.md">Установка Windows 7 x64 на UEFI</a></li>
+        <li><a href="/articles/helpers.md">Linux команды</a></li>
     </ul>
     <div class="content" style="display: none">
         <div class="title">
